apps/arr/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 99
      containers:
        - name: radarr
          image: ghcr.io/onedr0p/radarr:5.7.0
          resources:
            requests:
              memory: "150Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "300m"
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: radarr-data
        - name: wireguard-config
          secret:
            secretName: wireguard-config
