apps/arr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  type: ClusterIP
  ports:
  - port: 7878
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: radarr
