apps/arr/radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ${INTERNAL_INGRESS_CLASS}
  tls:
    - hosts:
        - "radarr.${INTERNAL_DOMAIN}"
      secretName: "radarr-tls"
  rules:
    - host: "radarr.${INTERNAL_DOMAIN}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
